# raptor

./: CMakeLists.txt  README  _DO_NOT_PACKAGE_RAPTOR  ideas.txt  plasma-applet-raptor.desktop  raptor.cpp  raptor.h  raptor.trig  raptordialog.cpp  raptordialog.h
concept/: applications-onthology  ideas.txt
engine/: CMakeLists.txt  RaptorEngine.cpp  RaptorEngine.h  plasma-engine-raptor.desktop
engine/kickoff/: applicationmodel.cpp  applicationmodel.h  favoritesmodel.cpp  favoritesmodel.h  kickoffmodel.cpp  leavemodel.cpp  searchmodel.cpp  searchmodel.h
engine/nepomuk/: nepomukmodel.cpp  nepomukmodel.h  tasks_cats_db  tomspecs
kickoff/core/: searchmodel.cpp
playground/: breadcrumb.cpp  breadcrumb.h  breadcrumbitem.cpp  breadcrumbitem.h
view/: CMakeLists.txt~  blur.cpp  breadcrumb.cpp  breadcrumb.h  breadcrumbitem.cpp  breadcrumbitem.h  raptorbreadcrumb.cpp  raptorbreadcrumb.h  raptorbreadcrumbitem.cpp  raptorbreadcrumbitem.h  raptordescriptiondelegate.cpp  raptordescriptiondelegate.h  raptorgraphicslayout.cpp  raptorgraphicslayout.h  raptorgraphicsview.cpp  raptorgraphicsview.h  raptorgraphicswidget.cpp  raptorgraphicswidget.h  raptoritemdelegate.cpp  raptoritemdelegate.h  raptoritemsview.cpp  raptoritemsview.cpp~  raptoritemsview.h  raptoritemsview.h~  raptormenuitem.cpp  raptormenuitem.h  raptorscrollbutton.cpp  raptorscrollbutton.h
view/test/: CMakeLists.txt  main.cpp  model
view/test/model/: kickoffabstractmodel.cpp  models.cpp
widget/: CMakeLists.txt  main.cpp  widget-testui.rc  widget.h
